# fastapi-cotizaciones

./: .gitignore  README.md  models.py  pyproject.toml  requirements.txt  schemas.py  teste.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: api.py
app/api/v1/endpoints/: client_type.py  customer.py  order_status.py  product.py  product_extra_option.py  store.py
app/core/: database.py
app/crud/: __init__.py  client_type.py  customer.py  order_status.py  product.py  product_extra_option.py  store.py
app/models/: __init__.py  client_type.py  customer.py  extra_option.py  order.py  order_detail.py  order_detail_extra_option.py  order_status.py  product.py  product_extra_option.py  product_product_type.py  product_type.py  store.py  type_client.py
app/schemas/: __init__.py  client_type.py  customer.py  extra_option.py  order.py  order_status.py  product.py  product_extra_option.py  product_type.py  store.py  type_client.py
src/: app.py
src/api/: __init__.py
src/api/v1/: api.py
src/api/v1/endpoints/: client_type.py  customer.py  order_status.py  product.py  product_extra_option.py  product_type.py  store.py
src/core/: database.py
src/crud/: __init__.py  client_type.py  customer.py  order_status.py  product.py  product_extra_option.py  product_type.py  store.py
src/models/: __init__.py  customer.py  extra_option.py  order.py  order_detail.py  order_detail_extra_option.py  order_status.py  product.py  product_extra_option.py  product_product_type.py  product_type.py  store.py  type_client.py
src/schemas/: __init__.py  store.py
